fix "'return to top' is not visiblle" bug

--- a/scss/_return-to-top.scss
+++ b/scss/_return-to-top.scss
@@ -13,7 +13,7 @@
 
   transition: opacity $button_transition, bottom $button_transition;
 
-  &_visible {
+  &.return-to-top_visible {
     bottom: $return-to-top_offset;
 
     &:hover {
